--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <aside class="sidepanel">
         <a href="https://www.facebook.com/sergey.kadama.9/about_overview" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
         <a href="https://instagram.com/vva1ker_?igshid=ig68gtv2483k" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a href="https://vva1ker.github.io/" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text"><span>Социальные сети</span></div>
     </aside>
