--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <aside class="sidepanel">
         <a href="https://www.facebook.com/sergey.kadama.9/about_overview" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
         <a href="https://instagram.com/vva1ker_?igshid=ig68gtv2483k" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
-        <a href="https://vva1ker.github.io/" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text"><span>Социальные сети</span></div>
     </aside>
@@ -123,7 +123,7 @@
                     <div class="about__subtitle title__fz36 title">Меня зовут Сергей</div>
                     <div class="divider"></div>
                     <p class="about_me__text"> 
-                        Обучался программированию  в польском университете WSIIZ. После окончания работал над созданием игровых интерфейсов, игровым дизайном. Немного позже познакомился и заинтересовался Web-разработкой, версткой сайтов, Web-дизайном.  Что и было толчком пройти курсы по Web-разработке от Udemy. Постоянно совершенствую свои навыки наблюдая за развитием сферы и изучая новые методы, а так же языки программирования, такие как :  Javascript - Java - Python  </p>
+                        Обучался программированию  в польском университете WSIIZ. После окончания, работал над созданием игровых интерфейсов, игровым дизайном. Немного позже познакомился и заинтересовался Web-разработкой, версткой сайтов, Web-дизайном.  Что и было толчком пройти курсы по Web-разработке от Udemy. Постоянно совершенствую свои навыки наблюдая за развитием сферы и изучая новые методы, а так же языки программирования, такие как :  Javascript - Java - Python  </p>
                 </div>
 
                     <div class="about_me__skills">
@@ -207,7 +207,7 @@
                                     <div class="exp__item__location">Курсы по Web-разработке </div>
                                 </div>
                                 <div class="exp__item__body">
-                                    Обучение Front-End / Back-end разработке. Работа с Photoshop, Avocode, Figma. Обучение HTML и CSS, а также JS и Jquery, работа с предпроцессорами SASS/SCSS/LESS, технологиями Bootstrap, Flexbox, CSS Grid, работа по БЭМ методологии
+                                    Обучение Front-End разработке. Работа с Photoshop, Avocode, Figma. Обучение HTML и CSS, а также JS и Jquery, работа с предпроцессорами SASS/SCSS/LESS, технологиями Bootstrap, Flexbox, CSS Grid, работа по БЭМ методологии
                                 </div>
                             </div>
                         </li>
